--- a/wazimap/templates/profile/profile_detail.html
+++ b/wazimap/templates/profile/profile_detail.html
@@ -127,6 +127,7 @@
 <script src="{% static 'js/vendor/leaflet-0.6.4.js' %}"></script>
 <script src="{% static 'js/vendor/topojson.v1.min.js' %}"></script>
 <script src="{% static 'js/vendor/leaflet.label.js' %}"></script>
+<script src="{% static 'js/vendor/dom-to-image.min.js' %}"></script>
 <script src="{% static 'js/charts.js' %}"></script>
 <script src="{% static 'js/head2head.js' %}"></script>
 <script src="{% static 'js/maps_static.js' %}"></script>
